--- a/intrusion-detection/LSTM-anomaly.ipynb
+++ b/intrusion-detection/LSTM-anomaly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "ec2e6fd0-f3c2-4db8-abbc-a5d99dce6d25",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,15 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import statistics\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset\n",
+    "from torch import nn\n",
+    "import random\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "\n",
+    "# TODO: figure out where I want to do data normalization, decide what features to keep or not\n",
     "\n",
     "RAW_DATA_PATH = \"./data/UNSW-NB15_?.csv\" # replace ? with 1,2,3,4\n",
     "FEATURE_PATH = \"./data/NUSW-NB15_features.csv\""
@@ -88,44 +97,115 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "all_seq = {}\n",
     "for name, g in groups:\n",
-    "    break\n",
-    "    print(f'{n}    {type(g)}')\n",
-    "    print(g)\n",
-    "\n",
-    "\n",
-    "g = groups.get_group(('59.166.0.0', '149.171.126.6'))\n",
-    "start_times = g['Stime']\n",
-    "\n",
-    "sequences = []\n",
-    "window_start_time = 0\n",
-    "current_seq = []\n",
-    "for ind, data in g.iterrows():\n",
-    "    if window_start_time == 0:\n",
-    "        window_start_time = data['Stime']\n",
+    "    sequences = []\n",
+    "    window_start_time = 0\n",
+    "    current_seq = []\n",
+    "    for ind, data in g.iterrows():\n",
+    "        if window_start_time == 0:\n",
+    "            window_start_time = data['Stime']\n",
+    "        \n",
+    "        current_seq.append(data)\n",
     "    \n",
-    "    #print(f'{ind} is {data['Stime']}')\n",
+    "        if (data['Stime']-window_start_time) >= TIME_WINDOW:\n",
+    "            window_start_time = 0\n",
+    "            sequences.append(current_seq)\n",
+    "            current_seq = []\n",
     "\n",
-    "    current_seq.append(data)\n",
+    "    all_seq[name] = sequences\n",
+    "    #print(f'{name} has {len(sequences)} sequences')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "b9956949-d651-4786-955e-cc7a39822f2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We have 79616 sequences in our dataset\n",
+      "Out of these, 9859 contain attacks\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Analysis and filtering of sequence data\n",
+    "MIN_SEQ_COUNT = 30 # want to exclude IP pairs that have less than 30 sequences, since these may not provide enough information to be relevant for training\n",
     "\n",
-    "    if (data['Stime']-window_start_time) >= TIME_WINDOW:\n",
-    "        window_start_time = 0\n",
-    "        sequences.append(current_seq)\n",
-    "        current_seq = []\n",
+    "raw_sequences = []\n",
+    "attack_indices = []\n",
+    "for k, v in all_seq.items():\n",
+    "    seq_count = len(v)\n",
+    "    \n",
+    "    lengths = [len(d) for d in v]\n",
+    "    if len(lengths) > MIN_SEQ_COUNT:\n",
+    "        #print(f'{k}: {len(v)} total sequences, {min(lengths)} min length, {max(lengths)} max length, {statistics.mean(lengths):.2f} average length')\n",
     "\n",
-    "print(len(sequences))"
+    "        for s in v:\n",
+    "            raw_sequences.append(s)\n",
+    "            \n",
+    "            for con in s:\n",
+    "                if con['Label'] == 1:\n",
+    "                    attack_indices.append(len(raw_sequences)-1)\n",
+    "                    break\n",
+    "\n",
+    "print(f'We have {len(raw_sequences)} sequences in our dataset')\n",
+    "print(f'Out of these, {len(attack_indices)} contain attacks')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9956949-d651-4786-955e-cc7a39822f2d",
+   "id": "4852707c-c09a-450d-881b-9dd403a290e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = [len(s) for s in sequences]\n",
+    "# Utilities\n",
+    "def raw_sequence_2_tensor(seq):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "86177779-df5b-4494-90c9-f4780f1664a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'raw_seq_2_tesnor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[84], line 18\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mraw_sequences[index], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mraw_labels[index]\n\u001b[1;32m     17\u001b[0m ds \u001b[38;5;241m=\u001b[39m SequenceDataset(raw_sequences, attack_indices)\n\u001b[0;32m---> 18\u001b[0m \u001b[43mraw_seq_2_tesnor\u001b[49m(ds[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'raw_seq_2_tesnor' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Dataset class\n",
+    "class SequenceDataset(Dataset):\n",
+    "    def __init__(self, sequences, attack_inds):\n",
+    "        self.raw_sequences = sequences\n",
+    "        self.raw_labels = []\n",
     "\n",
-    "print(f'min length is {min(p)}\\nmax is {max(p)} \\nmean is {statistics.mean(p)}')"
+    "        for index, s in enumerate(self.raw_sequences):\n",
+    "            self.raw_labels.append(1 if index in attack_inds else 0)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.raw_sequences)\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        return self.raw_sequences[index], self.raw_labels[index]\n",
+    "\n",
+    "\n",
+    "ds = SequenceDataset(raw_sequences, attack_indices)\n",
+    "raw_seq_2_tensor(ds[0][0])"
    ]
   },
   {
@@ -151,7 +231,29 @@
     "\n",
     "###\n",
     "for c in column_names:\n",
-    "    print(f'Column {c} has type {raw_data[c].dtype}')"
+    "    print(f'Column {c} has type {raw_data[c].dtype}')\n",
+    "\n",
+    "### sequence generation\n",
+    "g = groups.get_group(('59.166.0.0', '149.171.126.6'))\n",
+    "start_times = g['Stime']\n",
+    "\n",
+    "sequences = []\n",
+    "window_start_time = 0\n",
+    "current_seq = []\n",
+    "for ind, data in g.iterrows():\n",
+    "    if window_start_time == 0:\n",
+    "        window_start_time = data['Stime']\n",
+    "    \n",
+    "    #print(f'{ind} is {data['Stime']}')\n",
+    "\n",
+    "    current_seq.append(data)\n",
+    "\n",
+    "    if (data['Stime']-window_start_time) >= TIME_WINDOW:\n",
+    "        window_start_time = 0\n",
+    "        sequences.append(current_seq)\n",
+    "        current_seq = []\n",
+    "\n",
+    "print(len(sequences))"
    ]
   },
   {
