normalization and filtering

--- a/intrusion-detection/LSTM-anomaly.ipynb
+++ b/intrusion-detection/LSTM-anomaly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "id": "ec2e6fd0-f3c2-4db8-abbc-a5d99dce6d25",
    "metadata": {},
    "outputs": [],
@@ -19,6 +19,7 @@
     "scaler = MinMaxScaler()\n",
     "\n",
     "# TODO: figure out where I want to do data normalization, decide what features to keep or not\n",
+    "# idea is we can normalize everything first in the raw_da               taset, then individually convert to tensors and use get_dummies for categorical\n",
     "\n",
     "RAW_DATA_PATH = \"./data/UNSW-NB15_?.csv\" # replace ? with 1,2,3,4\n",
     "FEATURE_PATH = \"./data/NUSW-NB15_features.csv\""
@@ -26,15 +27,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "6e3b5680-8020-4ba3-b26d-e6f82a59e3f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_159912/961960945.py:21: DtypeWarning: Columns (1,3,47) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  temp = pd.read_csv(RAW_DATA_PATH.replace('?', str(i)), names=column_names)\n",
+      "/tmp/ipykernel_159912/961960945.py:21: DtypeWarning: Columns (3,39,47) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  temp = pd.read_csv(RAW_DATA_PATH.replace('?', str(i)), names=column_names)\n"
+     ]
+    }
+   ],
    "source": [
     "# Read datasets (see README.md for source)\n",
     "\n",
     "features = pd.read_csv(FEATURE_PATH, encoding='cp1252').drop(columns=['No.'])\n",
     "column_names = list(features['Name'])\n",
+    "column_names[column_names.index('ct_src_ ltm')] = 'ct_src_ltm'\n",
+    "\n",
     "column_types = {}\n",
     "\n",
     "# for some reason there is some weirdness columns like ports being in hexadecimal sometimes?\n",
@@ -67,17 +81,67 @@
     "\n",
     "# convert the hex values to ints\n",
     "def convert_to_int(v): \n",
-    "    if type(v) == str:\n",
+    "    if type(v) == str and v.startswith('0x'):\n",
     "        return int(v, 16)\n",
     "    return v\n",
     "\n",
-    "raw_data['sport'] = raw_data['sport'].apply(convert_to_int)\n",
-    "raw_data['dsport'] = raw_data['dsport'].apply(convert_to_int)"
+    "raw_data['sport'] = raw_data['sport'].apply(convert_to_int).astype(np.int64)\n",
+    "raw_data['dsport'] = raw_data['dsport'].apply(convert_to_int).astype(np.int64)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "id": "70eff186-8a36-4cbe-baba-94e4d9f68df5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ct_srv_src          67\n",
+       "ct_srv_dst          67\n",
+       "ct_dst_ltm          67\n",
+       "ct_src_ltm          67\n",
+       "ct_src_dport_ltm    67\n",
+       "ct_dst_sport_ltm    60\n",
+       "ct_dst_src_ltm      67\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Normalize and filter\n",
+    "# For some reason there is one dsport > 65535 (like 1)\n",
+    "raw_data = raw_data[raw_data['dsport'] <= 65535]\n",
+    "raw_data['ct_ftp_cmd'] = raw_data['ct_ftp_cmd'].apply(lambda x: 0 if x == ' ' else int(x)).astype(np.int64)\n",
+    "\n",
+    "# ok now lets normalize certain columns\n",
+    "# NOTE: stime and ltime columns werent normalized because we wont be needing them for the model, but we still need them to compute the sequences\n",
+    "# TODO: look into maybe applying log transforms to some of these\n",
+    "normalize_these = ['sport', 'dsport', 'dur', 'sbytes', 'dbytes', 'sttl', 'dttl', 'sloss', 'dloss', 'Sload', 'Dload', 'Spkts',\n",
+    "                   'Dpkts', 'swin', 'dwin', 'stcpb', 'dtcpb', 'smeansz', 'dmeansz', 'trans_depth', 'res_bdy_len',\n",
+    "                  'Sjit', 'Djit', 'Sintpkt', 'Dintpkt', 'tcprtt', 'synack', 'ackdat', 'ct_state_ttl', 'ct_ftp_cmd']\n",
+    "raw_data_normalized = raw_data.copy()\n",
+    "raw_data_normalized[normalize_these] = scaler.fit_transform(raw_data[normalize_these])\n",
+    "\n",
+    "# deal with NaN situation in column ct_flw_http_mthd\n",
+    "raw_data_normalized['ct_flw_http_mthd_is_nan'] = raw_data_normalized['ct_flw_http_mthd'].isna()\n",
+    "raw_data_normalized['ct_flw_http_mthd'] = raw_data_normalized['ct_flw_http_mthd'].apply(lambda x: 0 if pd.isna(x) else x)\n",
+    "\n",
+    "# deal with is_ftp_login having NaN and 2/4 values (type is supposedly binary)\n",
+    "raw_data_normalized['is_ftp_login_is_ambiguous'] = ((raw_data_normalized['is_ftp_login'].isna()) | (raw_data_normalized['is_ftp_login'] == 2))\n",
+    "raw_data_normalized['is_ftp_login'] = raw_data_normalized['is_ftp_login'].apply(lambda x: 0 if pd.isna(x) or x == 2 or x == 4 else x)\n",
+    "\n",
+    "raw_data_normalized[['ct_srv_src', 'ct_srv_dst', 'ct_dst_ltm', 'ct_src_ltm', 'ct_src_dport_ltm', 'ct_dst_sport_ltm', 'ct_dst_src_ltm']].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "cd3aa08b-b778-408f-8a66-3aa5f56ef039",
    "metadata": {},
    "outputs": [],
@@ -92,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0dc95ddc-720e-4427-bca4-a09bfc5ab134",
    "metadata": {},
    "outputs": [],
@@ -119,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "id": "b9956949-d651-4786-955e-cc7a39822f2d",
    "metadata": {},
    "outputs": [
@@ -171,22 +235,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "86177779-df5b-4494-90c9-f4780f1664a3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'raw_seq_2_tesnor' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[84], line 18\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mraw_sequences[index], \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mraw_labels[index]\n\u001b[1;32m     17\u001b[0m ds \u001b[38;5;241m=\u001b[39m SequenceDataset(raw_sequences, attack_indices)\n\u001b[0;32m---> 18\u001b[0m \u001b[43mraw_seq_2_tesnor\u001b[49m(ds[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m])\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'raw_seq_2_tesnor' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dataset class\n",
     "class SequenceDataset(Dataset):\n",
@@ -258,8 +310,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "bbaeea93-206b-4987-9b29-8311a3cedb22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "column_names.index('ct_src_ ltm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b70b0f1-5777-4a6f-a28b-5ffb4aed3744",
    "metadata": {},
    "outputs": [],
    "source": []
