--- a/intrusion-detection/LSTM-anomaly.ipynb
+++ b/intrusion-detection/LSTM-anomaly.ipynb
@@ -91,24 +91,394 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "70eff186-8a36-4cbe-baba-94e4d9f68df5",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>srcip</th>\n",
+       "      <th>sport</th>\n",
+       "      <th>dstip</th>\n",
+       "      <th>dsport</th>\n",
+       "      <th>proto</th>\n",
+       "      <th>state</th>\n",
+       "      <th>dur</th>\n",
+       "      <th>sbytes</th>\n",
+       "      <th>dbytes</th>\n",
+       "      <th>sttl</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ct_srv_dst</th>\n",
+       "      <th>ct_dst_ltm</th>\n",
+       "      <th>ct_src_ltm</th>\n",
+       "      <th>ct_src_dport_ltm</th>\n",
+       "      <th>ct_dst_sport_ltm</th>\n",
+       "      <th>ct_dst_src_ltm</th>\n",
+       "      <th>attack_cat</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>ct_flw_http_mthd_is_nan</th>\n",
+       "      <th>is_ftp_login_is_ambiguous</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>59.166.0.0</td>\n",
+       "      <td>0.021210</td>\n",
+       "      <td>149.171.126.6</td>\n",
+       "      <td>0.000809</td>\n",
+       "      <td>udp</td>\n",
+       "      <td>CON</td>\n",
+       "      <td>1.200687e-07</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>0.000011</td>\n",
+       "      <td>0.121569</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.090909</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.030303</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>59.166.0.0</td>\n",
+       "      <td>0.513634</td>\n",
+       "      <td>149.171.126.9</td>\n",
+       "      <td>0.015625</td>\n",
+       "      <td>udp</td>\n",
+       "      <td>CON</td>\n",
+       "      <td>4.112267e-06</td>\n",
+       "      <td>0.000037</td>\n",
+       "      <td>0.000021</td>\n",
+       "      <td>0.121569</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.045455</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.030303</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>59.166.0.6</td>\n",
+       "      <td>0.022339</td>\n",
+       "      <td>149.171.126.7</td>\n",
+       "      <td>0.000809</td>\n",
+       "      <td>udp</td>\n",
+       "      <td>CON</td>\n",
+       "      <td>1.273525e-07</td>\n",
+       "      <td>0.000010</td>\n",
+       "      <td>0.000012</td>\n",
+       "      <td>0.121569</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.106061</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>59.166.0.5</td>\n",
+       "      <td>0.054826</td>\n",
+       "      <td>149.171.126.5</td>\n",
+       "      <td>0.000809</td>\n",
+       "      <td>udp</td>\n",
+       "      <td>CON</td>\n",
+       "      <td>1.375953e-07</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>0.000011</td>\n",
+       "      <td>0.121569</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.121212</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>59.166.0.3</td>\n",
+       "      <td>0.757824</td>\n",
+       "      <td>149.171.126.0</td>\n",
+       "      <td>0.000809</td>\n",
+       "      <td>udp</td>\n",
+       "      <td>CON</td>\n",
+       "      <td>1.330429e-07</td>\n",
+       "      <td>0.000010</td>\n",
+       "      <td>0.000012</td>\n",
+       "      <td>0.121569</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.121212</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>440039</th>\n",
+       "      <td>59.166.0.5</td>\n",
+       "      <td>0.504982</td>\n",
+       "      <td>149.171.126.7</td>\n",
+       "      <td>0.662745</td>\n",
+       "      <td>tcp</td>\n",
+       "      <td>FIN</td>\n",
+       "      <td>9.936224e-06</td>\n",
+       "      <td>0.000022</td>\n",
+       "      <td>0.000125</td>\n",
+       "      <td>0.121569</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.030303</td>\n",
+       "      <td>0.030303</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.030303</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>440040</th>\n",
+       "      <td>59.166.0.7</td>\n",
+       "      <td>0.318120</td>\n",
+       "      <td>149.171.126.4</td>\n",
+       "      <td>0.000320</td>\n",
+       "      <td>tcp</td>\n",
+       "      <td>CON</td>\n",
+       "      <td>4.154695e-05</td>\n",
+       "      <td>0.000032</td>\n",
+       "      <td>0.000024</td>\n",
+       "      <td>0.121569</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.016949</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>440041</th>\n",
+       "      <td>59.166.0.3</td>\n",
+       "      <td>0.328237</td>\n",
+       "      <td>149.171.126.9</td>\n",
+       "      <td>0.000320</td>\n",
+       "      <td>tcp</td>\n",
+       "      <td>CON</td>\n",
+       "      <td>7.209987e-04</td>\n",
+       "      <td>0.000126</td>\n",
+       "      <td>0.000142</td>\n",
+       "      <td>0.121569</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.045455</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.016949</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>440042</th>\n",
+       "      <td>59.166.0.9</td>\n",
+       "      <td>0.540673</td>\n",
+       "      <td>149.171.126.0</td>\n",
+       "      <td>0.001221</td>\n",
+       "      <td>tcp</td>\n",
+       "      <td>CON</td>\n",
+       "      <td>2.504865e-04</td>\n",
+       "      <td>0.000244</td>\n",
+       "      <td>0.011329</td>\n",
+       "      <td>0.121569</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.045455</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.016949</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>440043</th>\n",
+       "      <td>175.45.176.0</td>\n",
+       "      <td>0.263874</td>\n",
+       "      <td>149.171.126.17</td>\n",
+       "      <td>0.001678</td>\n",
+       "      <td>tcp</td>\n",
+       "      <td>CON</td>\n",
+       "      <td>1.073202e-04</td>\n",
+       "      <td>0.000040</td>\n",
+       "      <td>0.000046</td>\n",
+       "      <td>0.243137</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.045455</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>0.016949</td>\n",
+       "      <td>0.015152</td>\n",
+       "      <td>Exploits</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2540010 rows × 51 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "ct_srv_src          67\n",
-       "ct_srv_dst          67\n",
-       "ct_dst_ltm          67\n",
-       "ct_src_ltm          67\n",
-       "ct_src_dport_ltm    67\n",
-       "ct_dst_sport_ltm    60\n",
-       "ct_dst_src_ltm      67\n",
-       "dtype: int64"
+       "               srcip     sport           dstip    dsport proto state  \\\n",
+       "0         59.166.0.0  0.021210   149.171.126.6  0.000809   udp   CON   \n",
+       "1         59.166.0.0  0.513634   149.171.126.9  0.015625   udp   CON   \n",
+       "2         59.166.0.6  0.022339   149.171.126.7  0.000809   udp   CON   \n",
+       "3         59.166.0.5  0.054826   149.171.126.5  0.000809   udp   CON   \n",
+       "4         59.166.0.3  0.757824   149.171.126.0  0.000809   udp   CON   \n",
+       "...              ...       ...             ...       ...   ...   ...   \n",
+       "440039    59.166.0.5  0.504982   149.171.126.7  0.662745   tcp   FIN   \n",
+       "440040    59.166.0.7  0.318120   149.171.126.4  0.000320   tcp   CON   \n",
+       "440041    59.166.0.3  0.328237   149.171.126.9  0.000320   tcp   CON   \n",
+       "440042    59.166.0.9  0.540673   149.171.126.0  0.001221   tcp   CON   \n",
+       "440043  175.45.176.0  0.263874  149.171.126.17  0.001678   tcp   CON   \n",
+       "\n",
+       "                 dur    sbytes    dbytes      sttl  ...  ct_srv_dst  \\\n",
+       "0       1.200687e-07  0.000009  0.000011  0.121569  ...    0.090909   \n",
+       "1       4.112267e-06  0.000037  0.000021  0.121569  ...    0.045455   \n",
+       "2       1.273525e-07  0.000010  0.000012  0.121569  ...    0.106061   \n",
+       "3       1.375953e-07  0.000009  0.000011  0.121569  ...    0.121212   \n",
+       "4       1.330429e-07  0.000010  0.000012  0.121569  ...    0.121212   \n",
+       "...              ...       ...       ...       ...  ...         ...   \n",
+       "440039  9.936224e-06  0.000022  0.000125  0.121569  ...    0.015152   \n",
+       "440040  4.154695e-05  0.000032  0.000024  0.121569  ...    0.015152   \n",
+       "440041  7.209987e-04  0.000126  0.000142  0.121569  ...    0.015152   \n",
+       "440042  2.504865e-04  0.000244  0.011329  0.121569  ...    0.000000   \n",
+       "440043  1.073202e-04  0.000040  0.000046  0.243137  ...    0.000000   \n",
+       "\n",
+       "        ct_dst_ltm  ct_src_ltm ct_src_dport_ltm  ct_dst_sport_ltm  \\\n",
+       "0         0.000000    0.030303         0.000000          0.000000   \n",
+       "1         0.015152    0.030303         0.000000          0.000000   \n",
+       "2         0.000000    0.015152         0.015152          0.000000   \n",
+       "3         0.000000    0.000000         0.000000          0.000000   \n",
+       "4         0.000000    0.000000         0.000000          0.000000   \n",
+       "...            ...         ...              ...               ...   \n",
+       "440039    0.030303    0.030303         0.000000          0.000000   \n",
+       "440040    0.015152    0.015152         0.015152          0.016949   \n",
+       "440041    0.045455    0.015152         0.015152          0.016949   \n",
+       "440042    0.015152    0.045455         0.015152          0.016949   \n",
+       "440043    0.015152    0.045455         0.015152          0.016949   \n",
+       "\n",
+       "        ct_dst_src_ltm  attack_cat  Label  ct_flw_http_mthd_is_nan  \\\n",
+       "0             0.000000         NaN      0                    False   \n",
+       "1             0.015152         NaN      0                    False   \n",
+       "2             0.000000         NaN      0                    False   \n",
+       "3             0.000000         NaN      0                    False   \n",
+       "4             0.000000         NaN      0                    False   \n",
+       "...                ...         ...    ...                      ...   \n",
+       "440039        0.030303         NaN      0                     True   \n",
+       "440040        0.015152         NaN      0                     True   \n",
+       "440041        0.015152         NaN      0                     True   \n",
+       "440042        0.015152         NaN      0                    False   \n",
+       "440043        0.015152    Exploits      1                     True   \n",
+       "\n",
+       "        is_ftp_login_is_ambiguous  \n",
+       "0                           False  \n",
+       "1                           False  \n",
+       "2                           False  \n",
+       "3                           False  \n",
+       "4                           False  \n",
+       "...                           ...  \n",
+       "440039                       True  \n",
+       "440040                       True  \n",
+       "440041                       True  \n",
+       "440042                       True  \n",
+       "440043                       True  \n",
+       "\n",
+       "[2540010 rows x 51 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +494,8 @@
     "# TODO: look into maybe applying log transforms to some of these\n",
     "normalize_these = ['sport', 'dsport', 'dur', 'sbytes', 'dbytes', 'sttl', 'dttl', 'sloss', 'dloss', 'Sload', 'Dload', 'Spkts',\n",
     "                   'Dpkts', 'swin', 'dwin', 'stcpb', 'dtcpb', 'smeansz', 'dmeansz', 'trans_depth', 'res_bdy_len',\n",
-    "                  'Sjit', 'Djit', 'Sintpkt', 'Dintpkt', 'tcprtt', 'synack', 'ackdat', 'ct_state_ttl', 'ct_ftp_cmd']\n",
+    "                  'Sjit', 'Djit', 'Sintpkt', 'Dintpkt', 'tcprtt', 'synack', 'ackdat', 'ct_state_ttl', 'ct_ftp_cmd',\n",
+    "                  'ct_srv_src', 'ct_srv_dst', 'ct_dst_ltm', 'ct_src_ltm', 'ct_src_dport_ltm', 'ct_dst_sport_ltm', 'ct_dst_src_ltm']\n",
     "raw_data_normalized = raw_data.copy()\n",
     "raw_data_normalized[normalize_these] = scaler.fit_transform(raw_data[normalize_these])\n",
     "\n",
@@ -136,7 +507,7 @@
     "raw_data_normalized['is_ftp_login_is_ambiguous'] = ((raw_data_normalized['is_ftp_login'].isna()) | (raw_data_normalized['is_ftp_login'] == 2))\n",
     "raw_data_normalized['is_ftp_login'] = raw_data_normalized['is_ftp_login'].apply(lambda x: 0 if pd.isna(x) or x == 2 or x == 4 else x)\n",
     "\n",
-    "raw_data_normalized[['ct_srv_src', 'ct_srv_dst', 'ct_dst_ltm', 'ct_src_ltm', 'ct_src_dport_ltm', 'ct_dst_sport_ltm', 'ct_dst_src_ltm']].max()"
+    "raw_data_normalized"
    ]
   },
   {
